# gcgit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  ci.yml
src/: api.rs  cli.rs  config.rs  content_types.rs  error.rs  git_wrapper.rs  lock.rs  main.rs  parser.rs  types.rs  zip_safety.rs
src/modules/: appsec.rs  mod.rs  xsiam.rs
